# egx

./: .gitignore  LICENSE  README.md  pyproject.toml
egx/: __init__.py  scraper.py
tests/: test_scraper.py
