[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "egx"
version = "0.2.0"
description = "An unofficial API wrapper for the Egyptian Exchange that lets you fetch historical and intraday index data."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Abdelrahman Ahmed", email = "abdelrahman.m.ahmed@proton.me"}
]
dependencies = [
    "requests",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/abed8080/egx"
